--- a/src/Scss/Home.scss
+++ b/src/Scss/Home.scss
@@ -1,3 +1,4 @@
+@import './media.scss';
 body {
     padding: 0 !important;
     margin: 0 !important;
@@ -6,51 +7,14 @@ body {
 .home-parent {
     width: 80% !important;
     margin: auto;
-
+    padding: 160px 0 100px 0 !important;
     .home-header-images {
         img {
-            padding: 160px 0 0 0;
+          
         }
     }
 
-    .navbar-first-parent {
-        border-top: 1px solid rgba(128, 128, 128, 0.202);
-        border-bottom: 1px solid rgba(128, 128, 128, 0.202);
-        padding: 15px 0;
-        margin: 10px 0;
-
-        .nav-bar-parent {
-            display: flex;
-            justify-content: space-between;
-            width: 95%;
-            margin: auto;
-
-            button {
-                border: none;
-                background: none;
-
-                a {
-                    transition: 1s;
-                    color: black;
-                    font-size: 14px;
-                    font-weight: 400;
-                }
-            }
-
-            button:hover a {
-                color: rgb(66, 221, 66);
-            }
-
-            .nav-bar {
-                display: flex;
-                justify-content: space-between;
-                gap: 30px;
-                margin-left: -20px;
-
-            }
-        }
-    }
-
+    
 
     // CARDS FIRST SECTION START HERE
 
@@ -60,9 +24,14 @@ body {
         grid-template-columns: 1fr 1fr 1fr;
         gap: 40px;
         margin: 40px 0;
+        @include lg{
+            
+                grid-template-columns: 1fr;
+            
+        }
 
         .card-first {
-            box-shadow: 0px 0px 5px 0px #bfacac96;
+            box-shadow: 0px 3px 8px 0px rgba(191, 172, 172, 0.5882352941);
             padding: 0px 10px 20px 10px;
             border-radius: 8px;
 
@@ -101,6 +70,84 @@ body {
             button {
                 border: none;
                 background: #36B5CD;
+                padding: 10px 10px;
+                text-decoration: 'none';
+                transition: .45s;
+                border-radius: 10px;
+
+                a {
+                    color: white;
+                    text-decoration: none;
+                    font-size: 15px;
+                }
+            }
+            button:hover{
+                background: #FF6161;
+            }
+
+        }
+    }
+
+
+
+      // CARDS SECOND SECTION START HERE
+
+
+      .card-second-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 40px;
+        margin: 80px 0;
+        @include lg{
+            
+                grid-template-columns: 1fr;
+            
+        }
+
+        .card-first {
+            box-shadow: 0px 3px 8px 0px rgba(191, 172, 172, 0.5882352941);
+            padding: 0px 10px 20px 10px;
+            border-radius: 8px;
+
+            .img-div {
+                padding: 20px 80px 0 0px;
+
+                img {
+                    width: 100%;
+                    box-shadow: 0px 0px 4px 0px black;
+                    border: 2px solid wheat;
+                    border-radius: 20px;
+
+                }
+            }
+
+            .title {
+                color: #577083,
+            }
+
+            .date {
+                color: #E7682F;
+            }
+
+            .title-head {
+                font-size: 19px;
+                color: #36B5CD;
+            }
+
+          .detail-para{
+            border-bottom: 1px solid black;
+            .detail {
+                font-size: 14px;
+            }
+          }
+
+            .system {
+                color: rgb(83 110 199 / 69%),
+            }
+
+            button {
+                border: none;
+                background: #36B5CD;
                 padding: 8px 10px;
                 text-decoration: 'none';
                 border-radius: 8px;
@@ -114,5 +161,7 @@ body {
 
         }
     }
+
+
 
 }
