--- a/src/Scss/CasinoStudio.scss
+++ b/src/Scss/CasinoStudio.scss
@@ -1,3 +1,4 @@
+@import './media.scss';;
 .Studio-parent{
     width: 80% !important;
     margin: auto;
@@ -13,6 +14,10 @@
         border: 1px solid rgb(50, 50, 50);
         padding: 20px;
         margin: 40px 0;
+        @include lg{
+            flex-direction: column;
+            gap: 0;
+        }
         h1{
             font-weight: 400;
         }
@@ -25,8 +30,9 @@
         }
     }
     .cards-link{
-        display: flex;
-        width: 50%;
+      
+        width: 90%;
+        margin: auto;
     }
   
 
