--- a/src/Scss/Home.scss
+++ b/src/Scss/Home.scss
@@ -8,6 +8,9 @@ body {
     width: 80% !important;
     margin: auto;
     padding: 160px 0 100px 0 !important;
+    @include lg{
+        padding: 80px 0 100px 0;
+    }
     .home-header-images {
         img {
           
