--- a/src/Scss/Sgaming2.scss
+++ b/src/Scss/Sgaming2.scss
@@ -1,93 +1,113 @@
+@import './media.scss';
+;
 
-
-
-@import './media.scss';;
-.sgamingtwo-parent{
+.sgamingtwo-parent {
     width: 80%;
     margin: auto;
     padding: 160px 0 100px 0 !important;
 
-    .cards-section{
-        .cards-sub-parent{
-            .title-div{
+    .cards-section {
+        .cards-sub-parent {
+            .title-div {
                 display: flex;
                 align-items: center;
                 gap: 20px;
-                @include lg{
+
+                @include lg {
                     flex-direction: column;
                 }
-                p{
+
+                p {
                     font-size: 18px;
                     font-weight: 400;
                 }
-               img{
-                @include lg{
-                    display: none;
+
+                img {
+                    @include lg {
+                        display: none;
+                    }
                 }
-               }
             }
-            .cards-detail{
+
+            .cards-detail {
                 display: grid;
-                grid-template-columns:1fr 1fr;
+                grid-template-columns: 1fr 1fr;
                 border-top: 3px solid black;
                 border-bottom: 1px solid black;
                 padding: 40px 0;
-                @include lg{
+
+                @include lg {
                     grid-template-columns: 1fr;
                 }
-              
-          gap: 20px;
-                @include lg{
-                    
+
+                gap: 20px;
+
+                @include lg {}
+
+                .korean {
+                    span {
+                        font-size: 14px;
+                        color: rgb(110, 110, 103);
+                    }
                 }
-                .points{
-                    h3{
+
+                .points {
+                    span {
                         line-height: 10px;
                         font-weight: 400;
-                         color: rgb(110, 110, 103);
-                        @include lg{
+                        color: rgb(0, 138, 252);
+                        font-size: 14px;
+
+                        @include lg {
                             line-height: 20px !important;
                         }
                     }
-                   
+
                 }
-                embed{
-                 
+
+                embed {
+
                     box-shadow: 0px 0px 4px 0px black;
                     width: 100%;
                     height: 350px;
                 }
-                p{
-                
+
+                p {
+
                     width: 90%;
                     font-size: 15px;
-                   
+
                 }
-                h3{
+
+                h3 {
                     font-size: 14px;
                     color: #008AFC;
                     font-weight: 400;
                 }
-                .points{
-                    h3{
+
+                .points {
+                    h3 {
                         font-size: 14px;
                         color: #008AFC;
-                        line-height:10px;
+                        line-height: 10px;
                     }
-                    p{
+
+                    p {
                         font-size: 14px;
                         color: #008AFC;
-                        line-height:10px;
+                        line-height: 10px;
                     }
                 }
             }
         }
-        .copy-right{
-            p{
-                color: rgb(110, 110, 103) ;
+
+        .copy-right {
+            p {
+                color: rgb(110, 110, 103);
                 font-weight: 500;
-line-height: 10px;
-                @include lg{
+                line-height: 10px;
+
+                @include lg {
                     line-height: 20px !important;
                 }
             }
