--- a/src/Scss/Singlepost.scss
+++ b/src/Scss/Singlepost.scss
@@ -1,3 +1,4 @@
+@import './media.scss';
 .single-post-parent{
     width: 80%;
     padding: 160px 0 100px 0;
@@ -96,6 +97,54 @@
                     font-weight: 400;
                 }
             }
+        }
+    }
+    .footer-parent{
+        width: 70%;
+        margin: auto;
+        .link-parent{
+           
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 0;
+        border-top: 2px solid #E6E6E6;
+        border-bottom: 2px solid #E6E6E6;
+        @include lg{
+            flex-direction: column;
+        }
+        
+        .link{
+            span{
+                margin: 0 5px  ;
+            }
+
+        }
+        
+        }
+        .user{
+            display: flex   ;
+            align-items: center;
+            @include lg{
+                flex-direction: column;
+            }
+            input{
+                width: 100%;
+                height: 50px;
+                border: none;
+                outline: none;
+                border: 2px solid #E6E6E6;
+            }
+        }
+        .facebook-link{
+            display: flex;
+           align-items: center;
+           padding-top: 10px;
+           margin-top: 40px;
+           border-top: 2px solid #E6E6E6;
+           a{
+            color:  #7E92BC;
+            font-size: 10px;
+           }
         }
     }
 }
