--- a/src/Scss/Singlepost.scss
+++ b/src/Scss/Singlepost.scss
@@ -98,6 +98,32 @@
                 }
             }
         }
+
+        .online-dedicated{
+   h6{
+     font-size: 18px;
+    font-weight: 700;
+    color: rgb(102, 102, 102);
+   }
+   p{
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(102, 102, 102);
+   }
+}
+.casino-system{
+    p{
+        font-size: 18px;
+    color: rgb(102, 102, 102);
+                    font-weight: 400;
+    }
+    li{
+        font-size: 18px;
+    color: rgb(102, 102, 102);
+                    font-weight: 400;
+                    line-height: 30px;
+    }
+}
     }
     .footer-parent{
         width: 70%;
@@ -135,6 +161,8 @@
                 border: 2px solid #E6E6E6;
             }
         }
+
+
         .facebook-link{
             display: flex;
            align-items: center;
